// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RangeSlider drag behavior should handle vertical drag events correctly as well 1`] = `
<div>
  <span
    class="rmd-label"
    id="slider-label"
  >
    Price
  </span>
  <div
    class="rmd-slider-container rmd-slider-container--pad-bottom rmd-slider-container--pad-top rmd-slider-container--v"
  >
    <span
      class="rmd-slider-track rmd-slider-track--animate rmd-slider-track--hoverable rmd-slider-track--v rmd-slider-track--v2"
      id="slider"
      style="--offset1: 0%; --offset2: 80%;"
    >
      <span
        aria-label="Min"
        aria-orientation="vertical"
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow="0"
        class="rmd-slider-thumb rmd-slider-thumb--v rmd-slider-thumb--v1 rmd-slider-thumb--animate"
        id="slider-thumb-1"
        role="slider"
        tabindex="0"
      />
      <input
        id="slider-thumb-1-value"
        type="hidden"
        value="0"
      />
      <span
        aria-label="Max"
        aria-orientation="vertical"
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow="80"
        class="rmd-slider-thumb rmd-slider-thumb--v rmd-slider-thumb--v2 rmd-slider-thumb--active rmd-slider-thumb--animate"
        id="slider-thumb-2"
        role="slider"
        tabindex="0"
      />
      <input
        id="slider-thumb-2-value"
        type="hidden"
        value="80"
      />
    </span>
  </div>
</div>
`;

exports[`RangeSlider drag behavior should handle vertical drag events correctly as well 2`] = `
<div>
  <span
    class="rmd-label"
    id="slider-label"
  >
    Price
  </span>
  <div
    class="rmd-slider-container rmd-slider-container--pad-bottom rmd-slider-container--pad-top rmd-slider-container--v"
  >
    <span
      class="rmd-slider-track rmd-slider-track--animate rmd-slider-track--hoverable rmd-slider-track--v rmd-slider-track--v2"
      id="slider"
      style="--offset1: 0%; --offset2: 50%;"
    >
      <span
        aria-label="Min"
        aria-orientation="vertical"
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow="0"
        class="rmd-slider-thumb rmd-slider-thumb--v rmd-slider-thumb--v1 rmd-slider-thumb--animate"
        id="slider-thumb-1"
        role="slider"
        tabindex="0"
      />
      <input
        id="slider-thumb-1-value"
        type="hidden"
        value="0"
      />
      <span
        aria-label="Max"
        aria-orientation="vertical"
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow="50"
        class="rmd-slider-thumb rmd-slider-thumb--v rmd-slider-thumb--v2 rmd-slider-thumb--active rmd-slider-thumb--animate"
        id="slider-thumb-2"
        role="slider"
        tabindex="0"
      />
      <input
        id="slider-thumb-2-value"
        type="hidden"
        value="50"
      />
    </span>
  </div>
</div>
`;

exports[`RangeSlider drag behavior should handle vertical drag events correctly as well 3`] = `
<div>
  <span
    class="rmd-label"
    id="slider-label"
  >
    Price
  </span>
  <div
    class="rmd-slider-container rmd-slider-container--pad-bottom rmd-slider-container--pad-top rmd-slider-container--v"
  >
    <span
      class="rmd-slider-track rmd-slider-track--animate rmd-slider-track--hoverable rmd-slider-track--v rmd-slider-track--v2"
      id="slider"
      style="--offset1: 0%; --offset2: 50%;"
    >
      <span
        aria-label="Min"
        aria-orientation="vertical"
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow="0"
        class="rmd-slider-thumb rmd-slider-thumb--v rmd-slider-thumb--v1 rmd-slider-thumb--animate"
        id="slider-thumb-1"
        role="slider"
        tabindex="0"
      />
      <input
        id="slider-thumb-1-value"
        type="hidden"
        value="0"
      />
      <span
        aria-label="Max"
        aria-orientation="vertical"
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow="50"
        class="rmd-slider-thumb rmd-slider-thumb--v rmd-slider-thumb--v2 rmd-slider-thumb--animate"
        id="slider-thumb-2"
        role="slider"
        tabindex="0"
      />
      <input
        id="slider-thumb-2-value"
        type="hidden"
        value="50"
      />
    </span>
  </div>
</div>
`;

exports[`RangeSlider drag behavior should work correctly for mouse events 1`] = `
<div>
  <span
    class="rmd-label"
    id="slider-label"
  >
    Price
  </span>
  <div
    class="rmd-slider-container rmd-slider-container--h rmd-slider-container--pad-left rmd-slider-container--pad-right"
  >
    <span
      class="rmd-slider-track rmd-slider-track--animate rmd-slider-track--hoverable rmd-slider-track--h rmd-slider-track--h2"
      id="slider"
      style="--offset1: 20%; --offset2: 100%;"
    >
      <span
        aria-label="Min"
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow="20"
        class="rmd-slider-thumb rmd-slider-thumb--h rmd-slider-thumb--h1 rmd-slider-thumb--active rmd-slider-thumb--animate"
        id="slider-thumb-1"
        role="slider"
        tabindex="0"
      />
      <input
        id="slider-thumb-1-value"
        type="hidden"
        value="20"
      />
      <span
        aria-label="Max"
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow="100"
        class="rmd-slider-thumb rmd-slider-thumb--h rmd-slider-thumb--h2 rmd-slider-thumb--animate"
        id="slider-thumb-2"
        role="slider"
        tabindex="0"
      />
      <input
        id="slider-thumb-2-value"
        type="hidden"
        value="100"
      />
    </span>
  </div>
</div>
`;

exports[`RangeSlider drag behavior should work correctly for mouse events 2`] = `
<div>
  <span
    class="rmd-label"
    id="slider-label"
  >
    Price
  </span>
  <div
    class="rmd-slider-container rmd-slider-container--h rmd-slider-container--pad-left rmd-slider-container--pad-right"
  >
    <span
      class="rmd-slider-track rmd-slider-track--animate rmd-slider-track--hoverable rmd-slider-track--h rmd-slider-track--h2"
      id="slider"
      style="--offset1: 50%; --offset2: 100%;"
    >
      <span
        aria-label="Min"
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow="50"
        class="rmd-slider-thumb rmd-slider-thumb--h rmd-slider-thumb--h1 rmd-slider-thumb--active rmd-slider-thumb--animate"
        id="slider-thumb-1"
        role="slider"
        tabindex="0"
      />
      <input
        id="slider-thumb-1-value"
        type="hidden"
        value="50"
      />
      <span
        aria-label="Max"
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow="100"
        class="rmd-slider-thumb rmd-slider-thumb--h rmd-slider-thumb--h2 rmd-slider-thumb--animate"
        id="slider-thumb-2"
        role="slider"
        tabindex="0"
      />
      <input
        id="slider-thumb-2-value"
        type="hidden"
        value="100"
      />
    </span>
  </div>
</div>
`;

exports[`RangeSlider drag behavior should work correctly for mouse events 3`] = `
<div>
  <span
    class="rmd-label"
    id="slider-label"
  >
    Price
  </span>
  <div
    class="rmd-slider-container rmd-slider-container--h rmd-slider-container--pad-left rmd-slider-container--pad-right"
  >
    <span
      class="rmd-slider-track rmd-slider-track--animate rmd-slider-track--hoverable rmd-slider-track--h rmd-slider-track--h2"
      id="slider"
      style="--offset1: 50%; --offset2: 100%;"
    >
      <span
        aria-label="Min"
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow="50"
        class="rmd-slider-thumb rmd-slider-thumb--h rmd-slider-thumb--h1 rmd-slider-thumb--animate"
        id="slider-thumb-1"
        role="slider"
        tabindex="0"
      />
      <input
        id="slider-thumb-1-value"
        type="hidden"
        value="50"
      />
      <span
        aria-label="Max"
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow="100"
        class="rmd-slider-thumb rmd-slider-thumb--h rmd-slider-thumb--h2 rmd-slider-thumb--animate"
        id="slider-thumb-2"
        role="slider"
        tabindex="0"
      />
      <input
        id="slider-thumb-2-value"
        type="hidden"
        value="100"
      />
    </span>
  </div>
</div>
`;

exports[`RangeSlider drag behavior should work correctly for touch events 1`] = `
<div>
  <span
    class="rmd-label"
    id="slider-label"
  >
    Price
  </span>
  <div
    class="rmd-slider-container rmd-slider-container--h rmd-slider-container--pad-left rmd-slider-container--pad-right"
  >
    <span
      class="rmd-slider-track rmd-slider-track--animate rmd-slider-track--hoverable rmd-slider-track--h rmd-slider-track--h2"
      id="slider"
      style="--offset1: 20%; --offset2: 100%;"
    >
      <span
        aria-label="Min"
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow="20"
        class="rmd-slider-thumb rmd-slider-thumb--h rmd-slider-thumb--h1 rmd-slider-thumb--active rmd-slider-thumb--animate"
        id="slider-thumb-1"
        role="slider"
        tabindex="0"
      />
      <input
        id="slider-thumb-1-value"
        type="hidden"
        value="20"
      />
      <span
        aria-label="Max"
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow="100"
        class="rmd-slider-thumb rmd-slider-thumb--h rmd-slider-thumb--h2 rmd-slider-thumb--animate"
        id="slider-thumb-2"
        role="slider"
        tabindex="0"
      />
      <input
        id="slider-thumb-2-value"
        type="hidden"
        value="100"
      />
    </span>
  </div>
</div>
`;

exports[`RangeSlider drag behavior should work correctly for touch events 2`] = `
<div>
  <span
    class="rmd-label"
    id="slider-label"
  >
    Price
  </span>
  <div
    class="rmd-slider-container rmd-slider-container--h rmd-slider-container--pad-left rmd-slider-container--pad-right"
  >
    <span
      class="rmd-slider-track rmd-slider-track--animate rmd-slider-track--hoverable rmd-slider-track--h rmd-slider-track--h2"
      id="slider"
      style="--offset1: 50%; --offset2: 100%;"
    >
      <span
        aria-label="Min"
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow="50"
        class="rmd-slider-thumb rmd-slider-thumb--h rmd-slider-thumb--h1 rmd-slider-thumb--active rmd-slider-thumb--animate"
        id="slider-thumb-1"
        role="slider"
        tabindex="0"
      />
      <input
        id="slider-thumb-1-value"
        type="hidden"
        value="50"
      />
      <span
        aria-label="Max"
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow="100"
        class="rmd-slider-thumb rmd-slider-thumb--h rmd-slider-thumb--h2 rmd-slider-thumb--animate"
        id="slider-thumb-2"
        role="slider"
        tabindex="0"
      />
      <input
        id="slider-thumb-2-value"
        type="hidden"
        value="100"
      />
    </span>
  </div>
</div>
`;

exports[`RangeSlider drag behavior should work correctly for touch events 3`] = `
<div>
  <span
    class="rmd-label"
    id="slider-label"
  >
    Price
  </span>
  <div
    class="rmd-slider-container rmd-slider-container--h rmd-slider-container--pad-left rmd-slider-container--pad-right"
  >
    <span
      class="rmd-slider-track rmd-slider-track--animate rmd-slider-track--hoverable rmd-slider-track--h rmd-slider-track--h2"
      id="slider"
      style="--offset1: 50%; --offset2: 100%;"
    >
      <span
        aria-label="Min"
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow="50"
        class="rmd-slider-thumb rmd-slider-thumb--h rmd-slider-thumb--h1 rmd-slider-thumb--animate"
        id="slider-thumb-1"
        role="slider"
        tabindex="0"
      />
      <input
        id="slider-thumb-1-value"
        type="hidden"
        value="50"
      />
      <span
        aria-label="Max"
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow="100"
        class="rmd-slider-thumb rmd-slider-thumb--h rmd-slider-thumb--h2 rmd-slider-thumb--animate"
        id="slider-thumb-2"
        role="slider"
        tabindex="0"
      />
      <input
        id="slider-thumb-2-value"
        type="hidden"
        value="100"
      />
    </span>
  </div>
</div>
`;

exports[`RangeSlider should render correctly 1`] = `
<div>
  <span
    class="rmd-label"
    id="slider-label"
  >
    Price
  </span>
  <div
    class="rmd-slider-container rmd-slider-container--h rmd-slider-container--pad-left rmd-slider-container--pad-right"
  >
    <span
      class="rmd-slider-track rmd-slider-track--animate rmd-slider-track--hoverable rmd-slider-track--h rmd-slider-track--h2"
      id="slider"
      style="--offset1: 0%; --offset2: 100%;"
    >
      <span
        aria-label="Min"
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow="0"
        class="rmd-slider-thumb rmd-slider-thumb--h rmd-slider-thumb--h1 rmd-slider-thumb--animate"
        id="slider-thumb-1"
        role="slider"
        tabindex="0"
      />
      <input
        id="slider-thumb-1-value"
        type="hidden"
        value="0"
      />
      <span
        aria-label="Max"
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow="100"
        class="rmd-slider-thumb rmd-slider-thumb--h rmd-slider-thumb--h2 rmd-slider-thumb--animate"
        id="slider-thumb-2"
        role="slider"
        tabindex="0"
      />
      <input
        id="slider-thumb-2-value"
        type="hidden"
        value="100"
      />
    </span>
  </div>
</div>
`;

exports[`RangeSlider should render correctly 2`] = `
<div>
  <span
    class="rmd-label"
    id="slider-label"
  >
    Price
  </span>
  <div
    class="rmd-slider-container rmd-slider-container--h rmd-slider-container--pad-left rmd-slider-container--pad-right"
  >
    <span
      class="rmd-slider-track rmd-slider-track--animate rmd-slider-track--hoverable rmd-slider-track--h rmd-slider-track--h2"
      id="slider"
      style="--offset1: 0%; --offset2: 100%;"
    >
      <span
        aria-label="Min"
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow="0"
        class="rmd-slider-thumb rmd-slider-thumb--h rmd-slider-thumb--h1 rmd-slider-thumb--animate"
        id="slider-thumb-1"
        role="slider"
        tabindex="0"
      />
      <input
        id="slider-thumb-1-value"
        type="hidden"
        value="0"
      />
      <span
        aria-label="Max"
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow="100"
        class="rmd-slider-thumb rmd-slider-thumb--h rmd-slider-thumb--h2 rmd-slider-thumb--animate"
        id="slider-thumb-2"
        role="slider"
        tabindex="0"
      />
      <input
        id="slider-thumb-2-value"
        type="hidden"
        value="100"
      />
    </span>
  </div>
</div>
`;

exports[`RangeSlider should render correctly 3`] = `
<div>
  <span
    class="rmd-label"
    id="slider-label"
  >
    Price
  </span>
  <div
    class="rmd-slider-container rmd-slider-container--h rmd-slider-container--pad-left rmd-slider-container--pad-right"
  >
    <span
      class="rmd-slider-track rmd-slider-track--animate rmd-slider-track--hoverable rmd-slider-track--h rmd-slider-track--h2"
      id="slider"
      style="--offset1: 0%; --offset2: 100%;"
    >
      <span
        aria-label="Min"
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow="0"
        class="rmd-slider-thumb rmd-slider-thumb--h rmd-slider-thumb--h1 rmd-slider-thumb--animate"
        id="slider-thumb-1"
        role="slider"
        tabindex="0"
      />
      <input
        id="slider-thumb-1-value"
        type="hidden"
        value="0"
      />
      <span
        aria-label="Max"
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow="100"
        class="rmd-slider-thumb rmd-slider-thumb--h rmd-slider-thumb--h2 rmd-slider-thumb--animate"
        id="slider-thumb-2"
        role="slider"
        tabindex="0"
      />
      <input
        id="slider-thumb-2-value"
        type="hidden"
        value="100"
      />
    </span>
  </div>
</div>
`;

exports[`RangeSlider should render correctly 4`] = `
<div>
  <span
    class="rmd-label"
    id="slider-label"
  >
    Price
  </span>
  <div
    class="rmd-slider-container rmd-slider-container--h rmd-slider-container--pad-left rmd-slider-container--pad-right"
  >
    <span
      class="rmd-slider-track rmd-slider-track--animate rmd-slider-track--hoverable rmd-slider-track--h rmd-slider-track--h2"
      id="slider"
      style="--offset1: 0%; --offset2: 100%;"
    >
      <span
        aria-label="Min"
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow="0"
        class="rmd-slider-thumb rmd-slider-thumb--h rmd-slider-thumb--h1 rmd-slider-thumb--animate"
        id="slider-thumb-1"
        role="slider"
        tabindex="0"
      />
      <input
        id="slider-thumb-1-value"
        type="hidden"
        value="0"
      />
      <span
        aria-label="Max"
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow="100"
        class="rmd-slider-thumb rmd-slider-thumb--h rmd-slider-thumb--h2 rmd-slider-thumb--animate"
        id="slider-thumb-2"
        role="slider"
        tabindex="0"
      />
      <input
        id="slider-thumb-2-value"
        type="hidden"
        value="100"
      />
    </span>
  </div>
</div>
`;

exports[`RangeSlider should render correctly 5`] = `
<div>
  <span
    class="rmd-label"
    id="slider-label"
  >
    Price
  </span>
  <div
    class="rmd-slider-container rmd-slider-container--pad-bottom rmd-slider-container--pad-top rmd-slider-container--v"
  >
    <span
      class="rmd-slider-track rmd-slider-track--animate rmd-slider-track--hoverable rmd-slider-track--v rmd-slider-track--v2"
      id="slider"
      style="--offset1: 0%; --offset2: 100%;"
    >
      <span
        aria-label="Min"
        aria-orientation="vertical"
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow="0"
        class="rmd-slider-thumb rmd-slider-thumb--v rmd-slider-thumb--v1 rmd-slider-thumb--animate"
        id="slider-thumb-1"
        role="slider"
        tabindex="0"
      />
      <input
        id="slider-thumb-1-value"
        type="hidden"
        value="0"
      />
      <span
        aria-label="Max"
        aria-orientation="vertical"
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow="100"
        class="rmd-slider-thumb rmd-slider-thumb--v rmd-slider-thumb--v2 rmd-slider-thumb--animate"
        id="slider-thumb-2"
        role="slider"
        tabindex="0"
      />
      <input
        id="slider-thumb-2-value"
        type="hidden"
        value="100"
      />
    </span>
  </div>
</div>
`;

exports[`RangeSlider should render correctly 6`] = `
<div>
  <span
    class="rmd-label"
    id="slider-label"
  >
    Price
  </span>
  <div
    class="rmd-slider-container rmd-slider-container--pad-bottom rmd-slider-container--pad-top rmd-slider-container--v"
  >
    <span
      class="rmd-slider-track rmd-slider-track--animate rmd-slider-track--hoverable rmd-slider-track--v rmd-slider-track--v2"
      id="slider"
      style="--offset1: 0%; --offset2: 100%;"
    >
      <span
        aria-label="Min"
        aria-orientation="vertical"
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow="0"
        class="rmd-slider-thumb rmd-slider-thumb--v rmd-slider-thumb--v1 rmd-slider-thumb--animate"
        id="slider-thumb-1"
        role="slider"
        tabindex="0"
      />
      <input
        id="slider-thumb-1-value"
        type="hidden"
        value="0"
      />
      <span
        aria-label="Max"
        aria-orientation="vertical"
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow="100"
        class="rmd-slider-thumb rmd-slider-thumb--v rmd-slider-thumb--v2 rmd-slider-thumb--animate"
        id="slider-thumb-2"
        role="slider"
        tabindex="0"
      />
      <input
        id="slider-thumb-2-value"
        type="hidden"
        value="100"
      />
    </span>
  </div>
</div>
`;

exports[`RangeSlider should render correctly 7`] = `
<div>
  <span
    class="rmd-label"
    id="slider-label"
  >
    Price
  </span>
  <div
    class="rmd-slider-container rmd-slider-container--pad-bottom rmd-slider-container--pad-top rmd-slider-container--v"
  >
    <span
      class="rmd-slider-track rmd-slider-track--animate rmd-slider-track--hoverable rmd-slider-track--v rmd-slider-track--v2"
      id="slider"
      style="--offset1: 0%; --offset2: 100%;"
    >
      <span
        aria-label="Min"
        aria-orientation="vertical"
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow="0"
        class="rmd-slider-thumb rmd-slider-thumb--v rmd-slider-thumb--v1 rmd-slider-thumb--animate"
        id="slider-thumb-1"
        role="slider"
        tabindex="0"
      />
      <input
        id="slider-thumb-1-value"
        type="hidden"
        value="0"
      />
      <span
        aria-label="Max"
        aria-orientation="vertical"
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow="100"
        class="rmd-slider-thumb rmd-slider-thumb--v rmd-slider-thumb--v2 rmd-slider-thumb--animate"
        id="slider-thumb-2"
        role="slider"
        tabindex="0"
      />
      <input
        id="slider-thumb-2-value"
        type="hidden"
        value="100"
      />
    </span>
  </div>
</div>
`;

exports[`RangeSlider should render correctly 8`] = `
<div>
  <span
    class="rmd-label"
    id="slider-label"
  >
    Price
  </span>
  <div
    class="rmd-slider-container rmd-slider-container--pad-bottom rmd-slider-container--pad-top rmd-slider-container--v"
  >
    <span
      class="rmd-slider-track rmd-slider-track--animate rmd-slider-track--hoverable rmd-slider-track--v rmd-slider-track--v2"
      id="slider"
      style="--offset1: 0%; --offset2: 100%;"
    >
      <span
        aria-label="Min"
        aria-orientation="vertical"
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow="0"
        class="rmd-slider-thumb rmd-slider-thumb--v rmd-slider-thumb--v1 rmd-slider-thumb--animate"
        id="slider-thumb-1"
        role="slider"
        tabindex="0"
      />
      <input
        id="slider-thumb-1-value"
        type="hidden"
        value="0"
      />
      <span
        aria-label="Max"
        aria-orientation="vertical"
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow="100"
        class="rmd-slider-thumb rmd-slider-thumb--v rmd-slider-thumb--v2 rmd-slider-thumb--animate"
        id="slider-thumb-2"
        role="slider"
        tabindex="0"
      />
      <input
        id="slider-thumb-2-value"
        type="hidden"
        value="100"
      />
    </span>
  </div>
</div>
`;

exports[`RangeSlider should render correctly 9`] = `
<div>
  <span
    class="rmd-label rmd-label--disabled"
    id="slider-label"
  >
    Price
  </span>
  <div
    class="rmd-slider-container rmd-slider-container--h rmd-slider-container--pad-left rmd-slider-container--pad-right"
  >
    <span
      class="rmd-slider-track rmd-slider-track--animate rmd-slider-track--disabled rmd-slider-track--h rmd-slider-track--h2"
      id="slider"
      style="--offset1: 0%; --offset2: 100%;"
    >
      <span
        class="rmd-slider-thumb rmd-slider-thumb--h rmd-slider-thumb--h1 rmd-slider-thumb--animate rmd-slider-thumb--disabled rmd-slider-thumb--mask rmd-slider-thumb--mask-h"
      />
      <span
        aria-disabled="true"
        aria-label="Min"
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow="0"
        class="rmd-slider-thumb rmd-slider-thumb--h rmd-slider-thumb--h1 rmd-slider-thumb--animate rmd-slider-thumb--disabled rmd-slider-thumb--disabled-h"
        id="slider-thumb-1"
        role="slider"
        tabindex="-1"
      />
      <input
        id="slider-thumb-1-value"
        type="hidden"
        value="0"
      />
      <span
        class="rmd-slider-thumb rmd-slider-thumb--h rmd-slider-thumb--h2 rmd-slider-thumb--animate rmd-slider-thumb--disabled rmd-slider-thumb--mask rmd-slider-thumb--mask-h"
      />
      <span
        aria-disabled="true"
        aria-label="Max"
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow="100"
        class="rmd-slider-thumb rmd-slider-thumb--h rmd-slider-thumb--h2 rmd-slider-thumb--animate rmd-slider-thumb--disabled rmd-slider-thumb--disabled-h"
        id="slider-thumb-2"
        role="slider"
        tabindex="-1"
      />
      <input
        id="slider-thumb-2-value"
        type="hidden"
        value="100"
      />
    </span>
  </div>
</div>
`;

exports[`RangeSlider should render correctly 10`] = `
<div>
  <span
    class="rmd-label rmd-label--disabled"
    id="slider-label"
  >
    Price
  </span>
  <div
    class="rmd-slider-container rmd-slider-container--pad-bottom rmd-slider-container--pad-top rmd-slider-container--v"
  >
    <span
      class="rmd-slider-track rmd-slider-track--animate rmd-slider-track--disabled rmd-slider-track--v rmd-slider-track--v2"
      id="slider"
      style="--offset1: 0%; --offset2: 100%;"
    >
      <span
        class="rmd-slider-thumb rmd-slider-thumb--v rmd-slider-thumb--v1 rmd-slider-thumb--animate rmd-slider-thumb--disabled rmd-slider-thumb--mask rmd-slider-thumb--mask-v"
      />
      <span
        aria-disabled="true"
        aria-label="Min"
        aria-orientation="vertical"
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow="0"
        class="rmd-slider-thumb rmd-slider-thumb--v rmd-slider-thumb--v1 rmd-slider-thumb--animate rmd-slider-thumb--disabled rmd-slider-thumb--disabled-v"
        id="slider-thumb-1"
        role="slider"
        tabindex="-1"
      />
      <input
        id="slider-thumb-1-value"
        type="hidden"
        value="0"
      />
      <span
        class="rmd-slider-thumb rmd-slider-thumb--v rmd-slider-thumb--v2 rmd-slider-thumb--animate rmd-slider-thumb--disabled rmd-slider-thumb--mask rmd-slider-thumb--mask-v"
      />
      <span
        aria-disabled="true"
        aria-label="Max"
        aria-orientation="vertical"
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow="100"
        class="rmd-slider-thumb rmd-slider-thumb--v rmd-slider-thumb--v2 rmd-slider-thumb--animate rmd-slider-thumb--disabled rmd-slider-thumb--disabled-v"
        id="slider-thumb-2"
        role="slider"
        tabindex="-1"
      />
      <input
        id="slider-thumb-2-value"
        type="hidden"
        value="100"
      />
    </span>
  </div>
</div>
`;
